Create ValueObjects and Correspond Exceptions

--- a/RoshanTarAzAftab.Domain/RoshanTarAzAftab.Domain.csproj
+++ b/RoshanTarAzAftab.Domain/RoshanTarAzAftab.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ValueObjects\Message\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared.Abstractions\RoshanTarAzAftab.Shared.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
