--- a/RoshanTarAzAftab.Application/RoshanTarAzAftab.Application.csproj
+++ b/RoshanTarAzAftab.Application/RoshanTarAzAftab.Application.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\Category\" />
+    <Folder Include="Commands\Comment\" />
+    <Folder Include="Commands\Message\" />
+    <Folder Include="Commands\Post\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RoshanTarAzAftab.Domain\RoshanTarAzAftab.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
