--- a/RoshanTarAzAftab.Infrastructure/RoshanTarAzAftab.Infrastructure.csproj
+++ b/RoshanTarAzAftab.Infrastructure/RoshanTarAzAftab.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RoshanTarAzAftab.Application\RoshanTarAzAftab.Application.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Domain\RoshanTarAzAftab.Domain.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared\RoshanTarAzAftab.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EF\Models\" />
+  </ItemGroup>
+
 </Project>
