Complete Query Handlers

--- a/RoshanTarAzAftab.Infrastructure/RoshanTarAzAftab.Infrastructure.csproj
+++ b/RoshanTarAzAftab.Infrastructure/RoshanTarAzAftab.Infrastructure.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\RoshanTarAzAftab.Shared\RoshanTarAzAftab.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EF\Services\" />
+  </ItemGroup>
+
 </Project>
