--- a/RoshanTarAzAftab.API/RoshanTarAzAftab.API.csproj
+++ b/RoshanTarAzAftab.API/RoshanTarAzAftab.API.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RoshanTarAzAftab.Application\RoshanTarAzAftab.Application.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Infrastructure\RoshanTarAzAftab.Infrastructure.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared.Abstractions\RoshanTarAzAftab.Shared.Abstractions.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared\RoshanTarAzAftab.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
