--- a/RoshanTarAzAftab.Application/RoshanTarAzAftab.Application.csproj
+++ b/RoshanTarAzAftab.Application/RoshanTarAzAftab.Application.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RoshanTarAzAftab.Domain\RoshanTarAzAftab.Domain.csproj" />
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared\RoshanTarAzAftab.Shared.csproj" />
   </ItemGroup>
 
 </Project>
