--- a/RoshanTarAzAftab.Shared/RoshanTarAzAftab.Shared.csproj
+++ b/RoshanTarAzAftab.Shared/RoshanTarAzAftab.Shared.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Scrutor" Version="4.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RoshanTarAzAftab.Shared.Abstractions\RoshanTarAzAftab.Shared.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
